packages/core/test/baseman/invalid-usage/case-no-command-1/commands/default.ts
import {
  Executable,
  Param,
} from '../../../../..';

export default class extends Executable {
  execute(
    @Param({
      description: 'Some name',
      required: true,
    })
    name: string,
  ) { }
}
